Fixed multi-word search error, changed font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>Interactive Photo Library</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="lightbox/css/lightbox.min.css">
+	<link rel="stylesheet" href="lightbox/css/lightbox.css">
+	<link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
